Travel to mexico city; try to configure typst in doom

--- a/modules/system/emacs/doom/config.org
+++ b/modules/system/emacs/doom/config.org
@@ -118,9 +118,10 @@ change `org-directory'. It must be set before org loads!
 (setq org-roam-directory (file-truename "~/Org/roam"))
 (add-to-list 'auto-mode-alist '("\\.org\\'" . org-mode))
 (map! :after org :map org-mode-map :prefix "C-c d" "p" #'org-download-clipboard-pdf)
+;; (map! :map org-mode-map "M-TAB" #'org-cycle-global)
 (load! "./extras/org-invoice-table.el")
-                                        ; (org-alert-enable)
-                                        ; (setq alert-default-style 'notifications)
+;; (org-alert-enable)
+;; (setq alert-default-style 'notifications)
 (use-package! org-transclusion
   :after org
   :init
@@ -132,7 +133,7 @@ change `org-directory'. It must be set before org loads!
 (org-babel-do-load-languages
  'org-babel-load-languages
  '((emacs-lisp . t)
-                                        ; (julia . t)
+   ;; (julia . t)
    (python . t)
    (jupyter . t)))
 (setq org-modern-label-border nil)
@@ -283,6 +284,10 @@ change `org-directory'. It must be set before org loads!
 #+BEGIN_SRC elisp
 (add-hook `pdf-view-mode-hook `pdf-view-themed-minor-mode)
 (add-to-list 'auto-mode-alist '("\\.mdx\\'" . markdown-mode))
+
+(add-to-list 'treesit-language-source-alist
+             '(typst "https://github.com/uben0/tree-sitter-typst"))
+(treesit-install-language-grammar 'typst)
 #+END_SRC
 * Coq and proof general
 #+BEGIN_SRC elisp
@@ -315,6 +320,9 @@ change `org-directory'. It must be set before org loads!
                     :server-id 'coq-lsp))
   :commands lsp)
 #+END_SRC
+
+#+RESULTS:
+
 * Haskell
 #+BEGIN_SRC elisp
 (after! lsp-haskell
@@ -354,6 +362,9 @@ change `org-directory'. It must be set before org loads!
 #+BEGIN_SRC elisp
 (add-to-list 'company-backends 'company-nixos-options 'company-coq)
 (use-package! lsp-tailwindcss)
+
+;; company not playing well with copilot
+(map! :map company-my-keymap "RET" #'company-complete-selection);
 
 ;; This is so that the hover over text in rust doesn't cut off.
 ;; if it doesn't work, try this more complicated thing https://github.com/emacs-lsp/lsp-mode/pull/1740#issuecomment-1776493727
