--- a/modules/system/emacs/doom/config.org
+++ b/modules/system/emacs/doom/config.org
@@ -279,6 +279,8 @@ change `org-directory'. It must be set before org loads!
 #+END_SRC
 * Making predictions and bets
 #+BEGIN_SRC elisp
+;; this should theoretically come in from packages.el
+;; empirically it doesn't.
 (load! "./extras/fatebook.el")
 #+END_SRC
 * Comms: pdf, markdown, etc.
@@ -286,9 +288,9 @@ change `org-directory'. It must be set before org loads!
 (add-hook `pdf-view-mode-hook `pdf-view-themed-minor-mode)
 (add-to-list 'auto-mode-alist '("\\.mdx\\'" . markdown-mode))
 
-;; (add-to-list 'treesit-language-source-alist
-;;              '(typst "https://github.com/uben0/tree-sitter-typst"))
-;; (treesit-install-language-grammar 'typst)
+(add-to-list 'treesit-language-source-alist
+             '(typst "https://github.com/uben0/tree-sitter-typst"))
+(treesit-install-language-grammar 'typst)
 #+END_SRC
 * Coq and proof general
 #+BEGIN_SRC elisp
@@ -337,8 +339,6 @@ change `org-directory'. It must be set before org loads!
 #+END_SRC
 * Other LLM things
 #+BEGIN_SRC elisp
-(auth-source-search :host "api.openai.com" :user "apikey")
-(auth-source-search :host "api.anthropic.com" :user "apikey")
 (defun get-anthropic-skey ()
   (let ((auth-info (auth-source-search :max 1 :host "api.anthropic.com" :user "apikey")))
     (when auth-info
@@ -346,10 +346,18 @@ change `org-directory'. It must be set before org loads!
         (if (functionp secret)
             (funcall secret)
           secret)))))
+(defun get-openai-skey ()
+  (let ((auth-info (auth-source-search :max 1 :host "api.openai.com" :user "apikey")))
+    (when auth-info
+      (let ((secret (plist-get (car auth-info) :secret)))
+        (if (functionp secret)
+            (funcall secret)
+          secret)))))
+;; (gptel-make-anthropic "Claude" :stream t :key 'get-anthropic-skey)
 (use-package! gptel
  :config (setq
-          gptel-model "claude-3-5-sonnet-20240620" ; "claude-3-sonnet-20240229", "claude-3-opus-20240229", "claude-3-haiku-20240307" also available
-          gptel-backend (gptel-make-anthropic "Claude" :stream t :key 'get-anthropic-skey)))
+         gptel-model "claude-3-5-sonnet-20240620" ; "claude-3-sonnet-20240229", "claude-3-opus-20240229", "claude-3-haiku-20240307" also available
+         gptel-backend (gptel-make-anthropic "Claude" :stream t :key 'get-anthropic-skey)))
 ;; accept completion from copilot and fallback to company
 (use-package! copilot
   :hook (prog-mode . copilot-mode)
