--- a/modules/system/emacs/doom/config.org
+++ b/modules/system/emacs/doom/config.org
@@ -325,7 +325,9 @@ change `org-directory'. It must be set before org loads!
 #+END_SRC
 
 #+RESULTS:
-
+* Lean4
+#+BEGIN_SRC elisp
+#+END_SRC
 * Haskell
 #+BEGIN_SRC elisp
 (after! lsp-haskell
@@ -361,47 +363,38 @@ change `org-directory'. It must be set before org loads!
 (use-package! gptel
  :config (setq
           gptel-model "claude-3-5-sonnet-20240620" ; "claude-3-sonnet-20240229", "claude-3-opus-20240229", "claude-3-haiku-20240307" also available
-          gptel-backend (gptel-make-anthropic "Claude" :stream t :key 'get-anthropic-skey))
-         ;; (gptel-make-openai "ChatGPT" :stream t :key 'get-openai-skey)
+          gptel-backend (gptel-make-anthropic "Sonnet3.5" :stream t :key 'get-anthropic-skey))
+         ;; (gptel-make-openai "ChatGPT-3.5" :stream t :key 'get-openai-skey)
+ (map! :leader :desc "Language model send"
+       "l" #'gptel-send)
  )
-;; accept completion from copilot and fallback to company
 (use-package! copilot
   :hook (prog-mode . copilot-mode)
   :bind (:map copilot-completion-map
               ("<right>" . 'copilot-accept-completion)
               ("C-<right>" . 'copilot-accept-completion-by-word)))
-;; (after! (evil copilot)
-;;   ;; Define the custom function that either accepts the completion or does the default behavior
-;;   (defun my/copilot-rightarrow-or-default ()
-;;     (interactive)
-;;     (if (and (bound-and-true-p copilot-mode)
-;;              ;; Add any other conditions to check for active copilot suggestions if necessary
-;;              )
-;;         (copilot-accept-completion)
-;;       (evil-insert 1))) ; Default action to insert a tab. Adjust as needed.
-;;
-;;   ;; Bind the custom function to <tab> in Evil's insert state
-;;   (evil-define-key 'insert 'global (kbd "<right>") 'my/copilot-rightarrow-or-default))
 #+END_SRC
 * completion and lsp
 #+BEGIN_SRC elisp
 (add-to-list 'company-backends 'company-nixos-options 'company-coq)
 (use-package! lsp-tailwindcss)
 
-;; company not playing well with copilot
-;; (map! :map company-my-keymap "TAB" #'company-complete-selection);
-(after! (evil copilot)
-  (defun company-complete-selection-or-default ()
+(after! (evil company)
+  (defun company-complete-selection-or-newline ()
+    "Complete selection with company or insert a tab"
     (interactive)
-    (if (and (bound-and-true-p company-mode))
-        (company-complete-selection)
-      (evil-insert 1)))
-  (evil-define-key 'insert 'global (kbd "TAB") 'company-complete-selection-or-default))
+    (if (company-explicit-action-p) (company-complete-selection)
+      (newline-and-indent)))
+  (map! :i "RET" #'company-complete-selection-or-newline))
 
 ;; This is so that the hover over text in rust doesn't cut off.
 ;; if it doesn't work, try this more complicated thing https://github.com/emacs-lsp/lsp-mode/pull/1740#issuecomment-1776493727
 (setq eldoc-echo-area-use-multiline-p t)
 #+END_SRC
+
+#+RESULTS:
+: t
+
 * Direnv
 #+BEGIN_SRC elisp
 (envrc-global-mode)
