--- a/modules/system/emacs/doom/config.org
+++ b/modules/system/emacs/doom/config.org
@@ -363,7 +363,7 @@ change `org-directory'. It must be set before org loads!
 ;; (gptel-make-anthropic "Claude" :stream t :key 'get-anthropic-skey)
 (use-package! gptel
  :config (setq
-          gptel-model "claude-3-5-sonnet-20240620" ; "claude-3-sonnet-20240229", "claude-3-opus-20240229", "claude-3-haiku-20240307" also available
+          gptel-model "claude-3-5-sonnet-20241022"
           gptel-backend (gptel-make-anthropic "Sonnet3.5" :stream t :key 'get-anthropic-skey))
          ;; (gptel-make-openai "ChatGPT-3.5" :stream t :key 'get-openai-skey)
  (map! :leader :desc "Language model send"
