--- a/machines/server/readme.org
+++ b/machines/server/readme.org
@@ -6,7 +6,7 @@
 [[file:coolermaster.jpg]]
 
 #+begin_example
-[admin@yoneda:~]$ nix-shell -p neofetch --run neofetch
+[admin@belegost:~]$ nix-shell -p neofetch --run neofetch
 these 9 paths will be fetched (4.10 MiB download, 21.54 MiB unpacked):
   /nix/store/mvncq1gfljrgx2v9pjysdmha8gw26cf8-libimagequant-4.3.4
   /nix/store/7pnad9w5wy66vxsj285n9ki2r58qzb10-libraqm-0.10.2
@@ -26,7 +26,7 @@ copying path '/nix/store/7pnad9w5wy66vxsj285n9ki2r58qzb10-libraqm-0.10.2' from '
 copying path '/nix/store/cdn1qgncn3pzs7b3mzryfb7a8p83azp3-python3.12-pillow-11.1.0' from 'https://cache.nixos.org'...
 copying path '/nix/store/2vrnq0mz2v5ab3ik8d79phvbk7xhjm1c-python3.12-ueberzug-18.1.9' from 'https://cache.nixos.org'...
 copying path '/nix/store/k80yjgsi1k0zyjj7261392jgs3n4s9gx-neofetch-unstable-2021-12-10' from 'https://cache.nixos.org'...
-          ▗▄▄▄       ▗▄▄▄▄    ▄▄▄▖            admin@yoneda
+          ▗▄▄▄       ▗▄▄▄▄    ▄▄▄▖            admin@belegost
           ▜███▙       ▜███▙  ▟███▛            ------------
            ▜███▙       ▜███▙▟███▛             OS: NixOS 25.05.20250412.2631b0b (Warbler) x86_64
             ▜███▙       ▜██████▛              Host: Framework FRANBMCP0B
