--- a/website/site/date.org
+++ b/website/site/date.org
@@ -1,5 +1,53 @@
 #+title: Date me
 
-stub
+32 male seeking wife/housemate/coparent
 
-Still using https://quinnd.net/date/
+I like the bay and I'll probably be back, but currently traveling. Unsure where I want to endgame, so I'm flexible on location.
+
+[[file:/assets/img/two.jpg
+]]
+* Type of guy
+
+- An ex once reported that I'm "really gung ho about the mortifying ordeal of being known".
+- I've been known to run taco nights at my house.
+- Swam from alcatraz to SF.
+- Really psyched about work, generally enjoy being someone who works a lot.
+- Almost entirely vegetarian.
+- Baby fever, but don't do a lot of thinking about my parenting values because I'd rather do that thinking as a group project with a special someone.
+- Often singing and humming, hopefully a turning a loved one's name into song.
+- I have at least two mysterious backstories.
+- Yes the kidney tshirt is real.
+- One secret zest for life / high hedonic setpoint trait/behavior that it'd be more fun to surprise you with.
+- Fic/media: mostly scifi and fantasy. Music: metal, prog, jazz.
+
+[[file:/assets/img/jolly.jpg]]
+
+* Testimonial by my dear friend Gavriel
+#+BEGIN_QUOTE
+What I most admire about Quinn is how much he cares and how much he’s willing to put action into his caring. He genuinely wants to be there for other people. I’ve seen him show so much openness to emotional connection in times when even other resilient and emotionally mature people would have been inclined to take a step back from their existing relationships. I’ve never seen stonewalling or apathy from him. Quinn always cares, and is excited to show that he cares. If you have the same love languages as Quinn, he’ll be able to make you feel super special. Being there for other people and caring doesn’t just mean caring about his friends or partners—he also shows up for communities. At a party, he’s either the host or the guy you assume is the host because he introduces a new burst of energy to each room he’s in.
+
+Quinn also has a super strong sense of self; he won’t passively fall into trends. I’ve never heard him be insincere or mocking. When so much media and so many conversations contain at least a little bit, and sometimes a lot, of mockery, Quinn has a refreshingly firm focus on topics where he can be completely sincere. Basically, it feels like the idiom “big-hearted” was invented to describe Quinn.
+#+END_QUOTE
+
+[[file:/assets/img/stupid-tshirt.jpg]]
+
+* Traits to make me swoon
+- *Sincerity*: Irony is poison. I admire anyone who's above average in earnestness.
+- *Analyticalness*: My mathematics training is a part of my worldview, and I get along best with people who can relate to that.
+- *Conviction*: Taking values seriously enough let them inform behavior is critical. I don't mean <i>loyalty</i> to convictions, but I mean honoring commitments for however long they seem like the right commitments.
+- *Compassion*: I often feel like I experience few visceral/involuntary empathy signals, and while there are so many advantages of engaging with empathy on an opt-in basis, I'd like to be in a support role for someone who feels conscripted into caring about others.
+- *Introspectiveness*: There's nothing wrong with having uncertainty about internal state, but in basically every situation it's much better to stare at it and report as much as possible about the uncertainty than to give up.
+
+[[file:/assets/img/swim.jpg]]
+
+[[file:greenswag.jpg]]
+
+* Contact
+- ~quinn.dougherty.forall@gmail.com~
+- https://calendly.com/quinn-dougherty
+** Prompts
+- Affection styles / love languages
+- Your (least?) favorite failure mode of "Radical Honesty" -adjacent practices
+- How erotic is assembling furniture together, scale of 1-10
+- How you think about the poly vs monog question
+- One of your "strong view weakly held" current childrearing beliefs/strats that you want my help to double check as a research project.
